input overflow fixed

--- a/src/app.scss
+++ b/src/app.scss
@@ -84,40 +84,47 @@ body {
       color: #c0392b;
     }
 
-    label {
-      display: inline-block;
-      margin: 10px 0;
-    }
-
-    input[type="text"],
-    input[type="number"] {
-      border: 1px solid #dedede;
-      border-radius: 0.2rem;
-      display: block;
-      font-size: 1.6rem;
-      padding: 1rem;
-      width: 95%;
-    }
-
-    .btn {
-      cursor: pointer;
-      background-color: #008bbe;
-      color: #fff;
-      border: 0;
-      display: block;
-      font-size: 1.6rem;
-      margin: 1rem 0 3rem;
-      padding: 1rem;
+    .add-transaction {
       width: 100%;
+      height: auto;
+      position: relative;
 
-      &:hover {
-        opacity: 0.8;
+      label {
+        display: inline-block;
+        margin: 10px 0;
       }
-    }
 
-    .btn:focus,
-    .delete-btn:focus {
-      outline: 0;
+      input[type="text"],
+      input[type="number"] {
+        border: 1px solid #dedede;
+        border-radius: 0.2rem;
+        display: block;
+        font-size: 1.6rem;
+        padding: 1rem;
+        width: 100%;
+        box-sizing: border-box;
+      }
+
+      .btn {
+        cursor: pointer;
+        background-color: #008bbe;
+        color: #fff;
+        border: 0;
+        display: block;
+        font-size: 1.6rem;
+        margin: 1rem 0 3rem;
+        padding: 1rem;
+        width: 100%;
+
+        &:hover {
+          opacity: 0.8;
+        }
+      }
+
+      .btn:focus,
+      .delete-btn:focus {
+        outline: 0;
+      }
     }
 
     .list {
